# reels

./: .gitignore  Cargo.toml
catalog-backfill/: build.sbt
catalog-backfill/.bsp/: sbt.json
catalog-backfill/project/: plugins.sbt
catalog-cl/: Cargo.toml
catalog-cl/src/: lib.rs
catalog-sv/: Cargo.toml  docker-compose.yml
catalog-sv/es/: config.yml  log4j2.properties
catalog-sv/migrations/2021-04-01-050739_create_movies/: down.sql  up.sql
catalog-sv/migrations/2021-04-07-230015_movie_pagination_index/: down.sql  up.sql
catalog-sv/migrations/2021-04-12-223847_movie_write_metadata/: down.sql  up.sql
catalog-sv/migrations/2021-04-14-042219_movie_index_tracking/: down.sql  up.sql
catalog-sv/migrations/2021-04-20-013527_movie_foreign_urls/: down.sql  up.sql
catalog-sv/migrations/2021-04-30-161540_soft_delete/: down.sql  up.sql
catalog-sv/migrations/2021-04-30-192132_utc_timezone_timestamps/: down.sql  up.sql
catalog-sv/migrations/2021-05-06-211717_full_reindex/: down.sql  up.sql
catalog-sv/src/: main.rs
catalog-sv/src/api/: mod.rs
catalog-sv/src/core/: action.rs  error.rs  mod.rs
catalog-sv/src/db/: mod.rs  pagination.rs  schema.patch  schema.rs  types.rs
catalog-sv/src/dmn/: deleter.rs  indexer.rs  mod.rs
catalog-sv/src/idx/: mod.rs  schema.rs
credits-sv/: build.sbt  docker-compose.yml  native-image-readme.md
credits-sv/src/main/scala/com/reels/credits/: Credits.scala  CreditsRoutes.scala  Main.scala  (+3 more)
mono/: build.sbt  docker-compose.yaml
mono/lib/dynamo/: build.sbt
mono/project/: Dependencies.scala
mono/svc/catalog/: build.sbt
(+28 files in other folders)
